# KDS-Semestral

./: CMakeLists.txt  README.md  client.c  communication.c  communication.h  crc.c  crc.h  image.c  image.h  main.h  receiver.c  sender.c  server.c  sha256.h  test.c  utils.c  utils.h
NetDerper/: Config.json
